# tree-sitter-arm64

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-arm64.h  tree-sitter-arm64.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_arm64/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterArm64Tests/: TreeSitterArm64Tests.swift
queries/: highlights.scm  locals.scm
src/: grammar.json  node-types.json  parser.c
