[package]
name = "tree-sitter-arm64"
description = "A parser for gas's assembler for use with arm64"
version = "0.0.1"
authors = ["Will Schroeder <will.j.schroeder@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "arm64"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/mysteriouslyseeing/tree-sitter-arm64/"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
